Complete fitting fix
- start working on halo mass function fix

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -87,7 +87,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fff0fb66b70>]"
+       "[<matplotlib.lines.Line2D at 0x7fff0fb46b38>]"
       ]
      },
      "execution_count": 5,
@@ -134,15 +134,8 @@
     "    hs = np.lib.recfunctions.append_fields(haloes, 'bin',\\\n",
     "        np.digitize(np.log10(haloes[bin_column]), bin_edges),\\\n",
     "        usemask=False)\n",
-    "    return hs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return hs\n",
+    "\n",
     "def halo_mass_function(r, snap):\n",
     "    hs = read_haloes(r, snap)\n",
     "    counts, bin_edges = np.histogram(np.log10(hs['M200Crit']), nbins)\n",
@@ -153,16 +146,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fff0f989da0>]"
+       "[<matplotlib.lines.Line2D at 0x7fff0f9559b0>]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -191,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -428,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +437,7 @@
        "('GR_b64n512', 122, 'nfw', 1.5490998344665312, 4.1564067031676046)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,6 +450,26 @@
     "    return grav, snap, prof, rho_f, rho_s\n",
     "\n",
     "process(hs, grav, snap, prof)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.1511598257944939"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.log10(400.0 * np.power(10.0, 1.5490998344665312))"
    ]
   },
   {
