Finish m_star plots and move values to relation notebook

--- a/relation.ipynb
+++ b/relation.ipynb
@@ -271,6 +271,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TODO: color code by whether halo bin falls below or above $M^*$, as calculated in `halo.ipynb`:\n",
+    "\n",
+    "    snaps = [51, 61, 78, 93, 122]\n",
+    "    m_star = [\n",
+    "        12.195807148772062,\n",
+    "        12.556853371631494,\n",
+    "        12.830975647934311,\n",
+    "        12.919554466985371,\n",
+    "        12.981851739853052,\n",
+    "    ]\n",
+    "\n",
+    "![m_star](./plots/mf_mstar.pdf)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
@@ -396,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +514,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
