Move utilities to a separate package

--- a/halo.ipynb
+++ b/halo.ipynb
@@ -99,7 +99,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f7acc3e1b38>]"
+       "[<matplotlib.lines.Line2D at 0x7fd4dca23b00>]"
       ]
      },
      "execution_count": 5,
@@ -173,14 +173,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "/cosma/home/dp004/dc-oles1/var/cosma7/venv/lib/python3.6/site-packages/ipykernel_launcher.py:26: RuntimeWarning: divide by zero encountered in log10\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "11\n",
+      "12\n",
+      "12\n",
+      "11\n"
      ]
     },
     {
@@ -207,6 +220,7 @@
     "    x_k, y_k = halo_mass_function(r, _snap, nbins)\n",
     "    y1, y2 = y_k[y_k > n_star][-1], y_k[y_k < n_star][0]\n",
     "    x1, x2 = x_k[y_k > n_star][-1], x_k[y_k < n_star][0]\n",
+    "#     print(len(y_k[y_k > n_star]))\n",
     "    m_star.append(((x2-x1)/(y2-y1))*(n_star-y1)+x1)\n",
     "\n",
     "    ax.plot(\n",
@@ -220,6 +234,13 @@
     "ax.set_ylim([0.0, 3.0])\n",
     "\n",
     "fig.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TODO: check if m_star follow (1+z)^2 relation"
    ]
   },
   {
