--- a/halo_flyby.ipynb
+++ b/halo_flyby.ipynb
@@ -14,11 +14,11 @@
     "%matplotlib inline\n",
     "plt.style.use(\"paper\")\n",
     "\n",
+    "import cosmology\n",
     "from hbtp import HBTReader\n",
     "from src.prof import HBTProfileReader\n",
     "from src.cmh import HBTHistoryReader\n",
-    "from src import read\n",
-    "from src import cosmology"
+    "from src import read"
    ]
   },
   {
@@ -247,7 +247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
