--- a/fitting.ipynb
+++ b/fitting.ipynb
@@ -12,8 +12,8 @@
     "\n",
     "%matplotlib inline\n",
     "\n",
-    "from src import nfw\n",
-    "from src import einasto"
+    "from cosmology import nfw\n",
+    "from cosmology import einasto"
    ]
   },
   {
@@ -129,21 +129,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.3"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
