--- a/halo.ipynb
+++ b/halo.ipynb
@@ -100,7 +100,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fb54e31f978>]"
+       "[<matplotlib.lines.Line2D at 0x7f17b5a99da0>]"
       ]
      },
      "execution_count": 5,
