add gr / f6 comparison notebook

--- a/halo.ipynb
+++ b/halo.ipynb
@@ -616,7 +616,8 @@
     "\n",
     "fig.tight_layout()\n",
     "\n",
-    "fig.savefig(\"./plots/prof_%s_%03d_%02d.pdf\" % (grav, snap, bin))"
+    "if savefig:\n",
+    "    fig.savefig(\"./plots/prof_%s_%03d_%02d.pdf\" % (grav, snap, bin))"
    ]
   },
   {
@@ -800,7 +801,8 @@
     "\n",
     "fig.tight_layout()\n",
     "\n",
-    "fig.savefig(\"./plots/cmh_f%03d_%s_%03d_%02d.pdf\" % (100 * NFW_f, grav, snap, bin))"
+    "if savefig:\n",
+    "    fig.savefig(\"./plots/cmh_f%03d_%s_%03d_%02d.pdf\" % (100 * NFW_f, grav, snap, bin))"
    ]
   },
   {
